--- a/admin/index.html
+++ b/admin/index.html
@@ -386,18 +386,21 @@
         }
 
         .copy-btn {
-            padding: 0.25rem 0.5rem;
+            padding: 0.5rem 1rem;
             background: var(--primary);
             color: white;
             border: none;
-            border-radius: 6px;
-            font-size: 0.75rem;
+            border-radius: 8px;
+            font-size: 0.875rem;
+            font-weight: 500;
             cursor: pointer;
             transition: all 0.2s ease;
+            white-space: nowrap;
         }
 
         .copy-btn:hover {
             background: var(--primary-dark);
+            transform: translateY(-1px);
         }
 
         .alert {
