--- a/admin/index.html
+++ b/admin/index.html
@@ -382,8 +382,15 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            gap: 0.5rem;
+            gap: 1rem;
+            min-height: 44px;
         }
+
+        .url-display span {
+            flex: 1;
+            word-break: break-all;
+            line-height: 1.4;
+        }        
 
         .copy-btn {
             padding: 0.5rem 1rem;
@@ -396,6 +403,12 @@
             cursor: pointer;
             transition: all 0.2s ease;
             white-space: nowrap;
+            flex-shrink: 0;
+            min-width: 60px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .copy-btn:hover {
